clang/test/BSC/Trait/r1/definition_13.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  int foo(This* this);
};

int get(trait F* f) {
  return 1;
};

int main() {
  int a = 1;
  int b = get(&a); // expected-error {{pointer type which has implemented 'trait F' or 'trait F*' is expected, but get 'int' here}}
  return 0;
}
